@@ -2,9 +2,12 @@ package hexlet.code.formatters;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
+import hexlet.code.Constants;
+
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class JsonFormatter {
     public static String formatJson(List<Map<String, Object>> diff) throws Exception {
@@ -13,25 +16,33 @@ public class JsonFormatter {
             mappedLine.put("key", line.get("FIELD"));
 
             String status = (String) line.get("STATUS");
-            if (status.equals("SAME")) {
-                mappedLine.put("status", "unchanged");
-                mappedLine.put("value", line.get("OLD_VALUE"));
-            } else if (status.equals("REMOVED")) {
-                mappedLine.put("status", "removed");
-                mappedLine.put("value", line.get("OLD_VALUE"));
-            } else if (status.equals("ADDED")) {
-                mappedLine.put("status", "added");
-                mappedLine.put("value", line.get("NEW_VALUE"));
-            } else if (status.equals("UPDATED")) {
-                mappedLine.put("status", "changed");
-                mappedLine.put("oldValue", line.get("OLD_VALUE"));
-                mappedLine.put("newValue", line.get("NEW_VALUE"));
+
+            switch (status) {
+                case "SAME" -> {
+                    mappedLine.put("status", Constants.UNCHANGED);
+                    mappedLine.put("value", line.get("OLD_VALUE"));
+                }
+                case "REMOVED" -> {
+                    mappedLine.put("status", Constants.REMOVED);
+                    mappedLine.put("value", line.get("OLD_VALUE"));
+                }
+                case "ADDED" -> {
+                    mappedLine.put("status", Constants.ADDED);
+                    mappedLine.put("value", line.get("NEW_VALUE"));
+                }
+                case "UPDATED" -> {
+                    mappedLine.put("status", Constants.CHANGED);
+                    mappedLine.put("oldValue", line.get("OLD_VALUE"));
+                    mappedLine.put("newValue", line.get("NEW_VALUE"));
+                }
+                default -> throw new IllegalStateException("Unknown status: " + status);
             }
             return mappedLine;
-        }).toList();
+        }).collect(Collectors.toList());
 
         ObjectMapper objectMapper = new ObjectMapper();
         objectMapper.enable(SerializationFeature.INDENT_OUTPUT);
         return objectMapper.writeValueAsString(mapped);
     }
 }
+
